# DearPy3D

./: .gitattributes  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
DearPy3D/: CMakeLists.txt  main.cpp  mvConfig.h  mvContext.cpp  mvContext.h  mvDearPy3D.h
DearPy3D/core/: mvMath.cpp  mvMath.h  mvTimer.cpp  mvTimer.h  mvTypes.h  mvViewport.cpp  mvViewport.h  mvWindow.cpp  mvWindow.h
DearPy3D/geometry/: Sphere.cpp  Sphere.h  mvSphere.cpp  mvSphere.h
DearPy3D/renderer/: mvAllocator.cpp  mvAllocator.h  mvAssetLoader.cpp  mvAssetLoader.h  mvAssetManager.cpp  mvAssetManager.h  mvBuffer.cpp  mvBuffer.h  mvCamera.cpp  mvCamera.h  mvDeletionQueue.cpp  mvDeletionQueue.h  mvDescriptorPool.cpp  mvDescriptorPool.h  mvDescriptorSet.cpp  mvDescriptorSet.h  mvDescriptors.cpp  mvDescriptors.h  mvGraphics.cpp  mvGraphics.h  mvGraphicsContext.cpp  mvGraphicsContext.h  mvImGuiManager.cpp  mvImGuiManager.h  mvLights.cpp  mvLights.h  mvLogicalDevice.cpp  mvLogicalDevice.h  mvMaterial.cpp  mvMaterial.h  mvMaterialBuffer.cpp  mvMaterialBuffer.h  mvMaterials.cpp  mvMaterials.h  mvMesh.cpp  mvMesh.h  mvObjLoader.cpp  mvObjLoader.h  mvObjMaterial.cpp  mvObjMaterial.h  (+27 more)
DearPy3D/renderer/bindables/: mvTexture.cpp  mvTexture.h
DearPy3D/renderer/buffers/: mvBuffer.h  mvIndexBuffer.cpp  mvIndexBuffer.h  mvMaterialBuffer.cpp  mvMaterialBuffer.h  mvTransformUniform.cpp  mvTransformUniform.h  mvVertexBuffer.cpp  mvVertexBuffer.h  mvVertexLayout.cpp  mvVertexLayout.h
DearPy3D/renderer/drawables/: mvCube.cpp  mvCube.h  mvDrawable.cpp  mvDrawable.h  mvSolidSphere.cpp  mvSolidSphere.h  mvTexturedQuad.cpp  mvTexturedQuad.h
DearPy3D/renderer/pipeline/: mvDescriptorSet.cpp  mvDescriptorSet.h  mvPipeline.cpp  mvPipeline.h  mvSampler.cpp  mvSampler.h  mvShader.cpp  mvShader.h
DearPy3D/shaders/: compile.bat  omnishadow.frag  omnishadow.vert  phong.frag  phong.vert  ps_shader.frag  ps_solid.frag  shader.vert  shadow.frag  simple.frag  simple.vert  skybox.frag  skybox.vert  vs_shader.vert  vs_shadow.vert
DearPy3D/utilities/: mvBase64.h  mvGLTFLoader.cpp  mvGLTFLoader.h  mvImporter.cpp  mvImporter.h  mvObjLoader.cpp  mvObjLoader.h
DearSandbox/: CMakeLists.txt  main.cpp  passes.h  pipelines.h
Demo_OpenGL/: CMakeLists.txt  main.cpp
Demo_Vulkan/: CMakeLists.txt  main.cpp
Demo_Vulkan/shaders/: compile.bat  compile.sh
Demos/Demo_Metal/: CMakeLists.txt  MetalAdder.h  MetalAdder.mm
ImGuiTesting/: CMakeLists.txt  main.cpp
Marvel/: CMakeLists.txt  main.cpp
Marvel/core/: mvKeyboard.h  mvMarvelUtils.cpp  mvMouse.cpp  mvWindow.cpp  mvWindow.h
Marvel/geometry/: Sphere.cpp  Sphere.h
Marvel/renderer/: mvBuffer.cpp  mvBuffer.h  mvCamera.cpp  mvCamera.h  mvDirectionLight.cpp  mvDirectionLight.h  mvGraphics.cpp  mvGraphics.h  mvImGuiManager.cpp  mvMaterial.h  mvModel.cpp  mvModel.h  mvModelProbe.cpp  mvModelProbe.h  mvNode.cpp  mvNode.h  mvPass.h  mvPointLight.cpp  mvPointLight.h  mvProjection.cpp  mvProjection.h  mvRenderGraph.cpp  mvRenderGraph.h  mvStep.cpp  mvStep.h  mvTechnique.cpp  mvTechnique.h  mvVertexLayout.cpp  mvVertexLayout.h
Marvel/renderer/bindables/: mvBindable.h  mvBindableRegistry.cpp  mvBindableRegistry.h  mvBlender.cpp  mvBlender.h  mvBufferResource.h  mvCommonBindables.h  mvConstantBuffer.h  mvCubeTexture.cpp  mvCubeTexture.h  mvDepthStencil.cpp  mvDepthStencil.h  mvGeometryShader.h  mvIndexBuffer.cpp  mvIndexBuffer.h  mvInputLayout.cpp  mvInputLayout.h  mvNullGeometryShader.h  mvNullPixelShader.cpp  mvNullPixelShader.h  (+27 more)
Marvel/shaders/: CubeTest_PS.hlsl  CubeTest_VS.hlsl  Gizmo_ps.hlsl  Gizmo_vs.hlsl  PBRModel_PS.hlsl  PhongDifMskNrm_PS.hlsl  PhongDifMskNrm_VS.hlsl  PhongDifNrm_PS.hlsl  PhongDifSpcNrm_PS.hlsl  PhongDifSpc_PS.hlsl  PhongDif_PS.hlsl  PhongDif_VS.hlsl  PhongModel_PS.hlsl  PhongModel_VS.hlsl  PhongProcedural_PS.hlsl  PhongProcedural_VS.hlsl  PhongShadow_PS.hlsl  PhongShadow_VS.hlsl  Phong_PS.hlsl  Phong_VS.hlsl  Shadow_PS.hlsl  Shadow_VS.hlsl  Skybox_PS.hlsl  Skybox_VS.hlsl  Solid_VS.hlsl  directionallight.hlsli  pointlight.hlsli  ps_flat.hlsl  ps_phong.hlsl  ps_shader.hlsl  pshadow.hlsli  shadow.hlsli  testcompute.hlsl  vs_flat.hlsl  vs_shader.hlsl  vs_texture.hlsl
Marvel_d3d11/: CMakeLists.txt  main.cpp
Marvel_d3d11/core/: mvKeyboard.cpp  mvMarvelUtils.cpp  mvMarvelUtils.h  mvMath.h  mvMouse.h  mvTimer.cpp  mvTimer.h  mvWindow.cpp  mvWindow.h
Marvel_d3d11/geometry/: Sphere.cpp  mvSphere.cpp  mvSphere.h
Marvel_d3d11/renderer/: mvBuffer.cpp  mvBuffer.h  mvCamera.cpp  mvCamera.h  mvGraphics.cpp  mvGraphics.h  mvImGuiManager.cpp  mvImGuiManager.h  mvMaterial.cpp  mvPointLight.cpp  mvPointLight.h  mvStep.h  mvVertexLayout.cpp  mvVertexLayout.h
Marvel_d3d11/shaders/: gs_flat.hlsl  pointlight.hlsli  ps_phong.hlsl  ps_shader.hlsl  ps_texture.hlsl  vs_phong.hlsl  vs_shader.hlsl  vs_texture.hlsl
Marvel_opengl/: CMakeLists.txt  main.cpp
Marvel_opengl/core/: mvWindow.cpp  mvWindow.h
Marvel_opengl/renderer/: mvCamera.cpp  mvCamera.h  mvGraphics.cpp  mvGraphics.h  mvProjection.cpp  mvProjection.h  mvVertexLayout.cpp  mvVertexLayout.h
Marvel_opengl/shaders/: ps_simple.glsl  ps_texture.glsl  vs_simple.glsl  vs_texture.glsl
Marvel_vulkan/: CMakeLists.txt  main.cpp
Marvel_vulkan/core/: mvWindow.cpp  mvWindow.h
Marvel_vulkan/renderer/: mvBuffer.h  mvCommandBuffer.cpp  mvCommandBuffer.h  mvCommandPool.cpp  mvCommandPool.h  mvDescriptorPool.cpp  mvDescriptorPool.h  mvDescriptorSet.cpp  mvDescriptorSet.h  mvDevice.cpp  mvDevice.h  mvGraphics.cpp  mvGraphics.h  mvGraphicsContext.cpp  mvGraphicsContext.h  mvIndexBuffer.cpp  mvIndexBuffer.h  mvPipeline.cpp  mvPipeline.h  mvRenderPass.cpp  mvRenderPass.h  mvSampler.cpp  mvSampler.h  mvShader.cpp  mvShader.h  mvSurface.cpp  mvSurface.h  mvSwapChain.cpp  mvSwapChain.h  mvTexture.cpp  mvTexture.h  mvVertexBuffer.cpp  mvVertexBuffer.h  mvVertexLayout.cpp  mvVertexLayout.h
Marvel_vulkan/shaders/: vs_shader.vert
NewSandbox/: CMakeLists.txt  main.cpp
OpenGL_ht/: CMakeLists.txt  main.cpp
Sandbox/: CMakeLists.txt  main.cpp
Vulkan_ht/: CMakeLists.txt  main.cpp
Vulkan_ht/shaders/: shader.vert  vert.spv
(+216 files in other folders)
